<resources>
    <string name="app_name">Book Library</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_logo_buat_splashscreen">Logo Buat SplashScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_next">Next</string>
    <string name="txt_dummy">lobortis elementum nibh tellus molestie nunc non blandit massa enim nec dui</string>
    <string name="txt_on_boarding_img">On Boarding Img</string>
    <string name="txt_welcome_back">Welcome Back!</string>
    <string name="txt_don_t_have_an_account">Don\'t have an account?</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_or">OR</string>
    <string name="txt_login_with_google">Login with Google</string>
    <string name="txt_register">Register</string>
    <string name="txt_already_have_account">Already have account?</string>
    <string name="txt_register_with_google">Register with Google</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_email">Email</string>
    <string name="txt_home">Home</string>
    <string name="txt_my_books">My Books</string>
    <string name="txt_discovery_all">Discovery all</string>
    <string name="txt_img_for_discovery_book">img_for_discovery_book</string>
    <string name="txt_search">Search</string>
    <string name="txt_bookmark">Bookmark</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_image_detail_for_book">Image detail for book</string>
    <string name="txt_isbn">ISBN</string>
    <string name="txt_pages">Pages</string>
    <string name="txt_status">Status</string>
    <string name="txt_publish_date">Publish date :</string>
    <string name="txt_author">Author :</string>
    <string name="txt_category">Category</string>
    <string name="txt_about_book">About book</string>
    <string name="txt_about_app">About App</string>
    <string name="txt_developer">Developer :</string>
    <string name="txt_muhammad_fatih_maulana">Muhammad Fatih Maulana</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_nobody313">NoBody313</string>
    <string name="txt_github">Github :</string>
    <string name="txt_another_features_coming_soon">Another features coming soon !!!</string>
    <string name="txt_button_search">Button Search</string>
</resources>