<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashscreen.onboarding.screen.FirstScreen">

    <ImageView
        android:id="@+id/img_onboardin"
        android:layout_width="301dp"
        android:layout_height="201dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/txt_on_boarding_img"
        android:src="@drawable/img_onboarding_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sub_onboarding"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_dummy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_onboardin" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_next"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_onboarding" />
</androidx.constraintlayout.widget.ConstraintLayout>