<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.BooksDetailActivity">

    <ImageView
        android:id="@+id/img_detail_book"
        android:layout_width="132dp"
        android:layout_height="164dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/txt_image_detail_for_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_title_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail_book" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title_book">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cv_isbn"
                    android:layout_width="110dp"
                    android:layout_height="62dp"
                    android:background="@drawable/bg_blue"
                    android:paddingStart="6dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_number_isbn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/poppins_light"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_isbn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_isbn"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_number_isbn" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cv_page"
                    android:layout_width="110dp"
                    android:layout_height="62dp"
                    android:background="@drawable/bg_yellow"
                    android:paddingStart="6dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cv_status"
                    app:layout_constraintStart_toEndOf="@id/cv_isbn"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_number_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/poppins_light"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_pages"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_number_page" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cv_status"
                    android:layout_width="110dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_pink"
                    android:paddingStart="6dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_status_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/poppins_light"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_status"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_status_info" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/col_data_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/cv_list">

                <!--  Date Publish Still Can't Use  -->
                <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
                <!--                    android:id="@+id/row_publish"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent">-->

                <!--                    <TextView-->
                <!--                        android:id="@+id/tv_publish_date"-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:fontFamily="@font/poppins_medium"-->
                <!--                        android:text="@string/txt_publish_date"-->
                <!--                        android:textAlignment="textStart"-->
                <!--                        android:textColor="@color/black"-->
                <!--                        android:textSize="14sp"-->
                <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
                <!--                        app:layout_constraintStart_toStartOf="parent"-->
                <!--                        app:layout_constraintTop_toTopOf="parent" />-->

                <!--                    <TextView-->
                <!--                        android:id="@+id/tv_book_publish_date"-->
                <!--                        android:layout_width="120dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:fontFamily="@font/poppins_regular"-->
                <!--                        android:textAlignment="textEnd"-->
                <!--                        android:textColor="@color/black"-->
                <!--                        android:textSize="14sp"-->
                <!--                        app:layout_constraintBaseline_toBaselineOf="@id/tv_publish_date"-->
                <!--                        app:layout_constraintEnd_toEndOf="parent" />-->
                <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/row_author"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_author"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_book_author"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/tv_author"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/row_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/row_author">

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_category"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_book_category"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/tv_category"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/col_about_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/col_data_book">

                <TextView
                    android:id="@+id/tv_title_about_book"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/txt_about_book"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_about_book"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_about_book" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>